fixed overflow issue

--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -42,7 +42,8 @@ $carousel-item-desktop-margin: 100px;
 .carousel-item {
 	scroll-snap-align: start;
 	max-height: $carousel-item-height;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
